@@ -26,23 +26,23 @@
         <section name="surface" checkable="false">
             <heading>Surface</heading>
             <item>
-                <icon pixmap="legend/ice.png"/>
+                <icon pixmap="maps/earth/bluemarble/legend/ice.png"/>
                 <text>Ice</text>
             </item>
             <item>
-                <icon pixmap="legend/mountain.png"/>
+                <icon pixmap="maps/earth/bluemarble/legend/mountain.png"/>
                 <text>Mountain</text>
             </item>
             <item>
-                <icon pixmap="legend/vegetation.png"/>
+                <icon pixmap="maps/earth/bluemarble/legend/vegetation.png"/>
                 <text>Vegetation</text>
             </item>
             <item>
-                <icon pixmap="legend/desert.png"/>
+                <icon pixmap="maps/earth/bluemarble/legend/desert.png"/>
                 <text>Desert</text>
             </item>
             <item>
-                <icon pixmap="legend/water.png"/>
+                <icon pixmap="maps/earth/bluemarble/legend/water.png"/>
                 <text>Water</text>
             </item>
         </section>
