@@ -2,6 +2,18 @@
 
     * src/lib/MapTheme.{cpp,h}:
     * src/lib/MarbleLegendBrowser.{cpp,h}:
+    * data/maps/earth/citylights/citylights.dgml:
+    * data/maps/earth/bluemarble/bluemarble.dgml:
+
+    - Allowing a completely custom legend.html per theme
+    - changing the relative position of the pixmap path
+      in the dgml file to allow access to the data/bitmaps
+      directory.
+
+2008-01-28  Torsten Rahn  <rahn@kde.org>
+
+    * src/lib/MapTheme.{cpp,h}:
+    * src/lib/MarbleLegendBrowser.{cpp,h}:
     * src/lib/MarbleModel.{cpp,h}:
     * src/lib/MapTheme.h:
     * data/maps/earth/srtm/srtm.dgml:
